<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codingclub.tanujyadav.codingclub.HomeFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/lll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#27cc21"
        android:text="@string/problem_of_the_week"
        android:textSize="@dimen/far1"
        android:paddingTop="@dimen/fh1"
        android:paddingBottom="@dimen/fh1"
        android:textAlignment="center"

        android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/feed_item_padding_top_bottom"
            android:layout_marginRight="@dimen/feed_item_padding_top_bottom"
            android:layout_height="@dimen/feed_item_border_width"
            android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/ap2"
        android:textSize="@dimen/ap2"
        android:paddingLeft="@dimen/feed_item_margin1"
        android:paddingRight="@dimen/feed_item_margin1"
        android:textColor="#f5f614"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/feed_item_margin1"
            android:paddingRight="@dimen/feed_item_margin1"
            android:text="@string/solve"
            android:textSize="@dimen/ap2"
            android:onClick="solve"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/feed_item_margin1"
            android:paddingTop="@dimen/fh3"
            android:textAlignment="center"
            android:text="@string/leaderboard"
            android:textSize="@dimen/far1"
            android:textColor="#ea4319"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/fh4"
                android:orientation="vertical"
                android:paddingTop="@dimen/fh1"
                android:layout_weight="0.3">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"

                    android:src="@drawable/trophygol"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/trophysil"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/trophybro"/>
            </LinearLayout>

        <TextView
            android:id="@+id/leader"
            android:layout_width="0dp"
            android:layout_height="@dimen/fh4"
            android:textSize="@dimen/fh5"
            android:textColor="@color/reg"
            android:layout_weight="0.6"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/ao10"
            android:paddingLeft="@dimen/feed_item_margin1"
            android:textColor="#ffffff"
            android:text="*leaderboard will be updated once in a week\n*prizes are only for NITD students"/>
    </LinearLayout>


</ScrollView>
</FrameLayout>
