<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codingclub.tanujyadav.codingclub.profile">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#2eaac5">
    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        android:orientation="horizontal"
        android:weightSum="3">


        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="@dimen/ap1"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/ap2" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:textColor="#b22222"
                android:textSize="@dimen/ao4" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin1">
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_gravity="right"
        android:onClick="edit"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/feed_item_margin"/>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <TextView
          android:id="@+id/userb"
          android:layout_width="@dimen/ao5"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/ao6"
          android:textColor="#000000"
          android:text="Branch          :"
          android:textSize="@dimen/ao7"
          />

      <EditText
          android:id="@+id/userbt"
          android:layout_width="@dimen/a08"
          android:layout_height="wrap_content"
          android:layout_toRightOf="@id/userb"
          android:inputType="text"
          android:visibility="gone"

          />
      <TextView
          android:id="@+id/userbtt"
          android:layout_width="@dimen/ao9"
          android:paddingLeft="@dimen/feed_item_margin1"
          android:textSize="@dimen/ao7"
          android:layout_height="wrap_content"
          android:layout_toRightOf="@id/userb"

          />
  </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/usery"
            android:paddingTop="@dimen/ao6"
            android:layout_width="@dimen/ao5"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="Year               :"
            android:textSize="@dimen/ao7"
            />
        <EditText
            android:id="@+id/useryt"
            android:layout_width="@dimen/a08"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/usery"
            android:inputType="text"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/userytt"
            android:layout_width="@dimen/ao9"
            android:paddingLeft="@dimen/feed_item_margin1"
            android:textSize="@dimen/ao7"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/usery"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/useri"
            android:paddingTop="@dimen/ao6"
            android:layout_width="@dimen/ao5"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="Institute        :"
            android:textSize="@dimen/ao7"
            />
        <EditText
            android:id="@+id/userit"
            android:layout_width="@dimen/a08"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/useri"
            android:inputType="text"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/useritt"
            android:layout_width="@dimen/ao9"
            android:paddingLeft="@dimen/feed_item_margin1"
            android:textSize="@dimen/ao7"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/useri"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/userp"
            android:paddingTop="@dimen/ao6"
            android:layout_width="@dimen/ao5"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="Phone No     :"
            android:textSize="@dimen/ao7"
            />
        <EditText
            android:id="@+id/userpt"
            android:layout_width="@dimen/a08"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/userp"
            android:visibility="gone"
            android:inputType="text"
            />
        <TextView
            android:id="@+id/userptt"
            android:layout_width="@dimen/ao9"
            android:paddingLeft="@dimen/feed_item_margin1"
            android:textSize="@dimen/ao7"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/userp"

            />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ao10"
        android:layout_marginTop="@dimen/a011"
        />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout_from_google"
        android:visibility="gone"
        android:layout_marginTop="@dimen/activity_vertical_margin1"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/btn_revoke_access"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_revoke_access"
        android:visibility="gone"
        android:paddingBottom="@dimen/activity_vertical_margin1"
        />

       </LinearLayout>

</LinearLayout>
